--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         @page {
             size: A4;
-            margin: 1in;
+            margin: 20mm;
         }
 
         @media print {
@@ -21,12 +21,12 @@
        
     </style>
     <Style>
-        body{font-family:Georgia; margin: 20px; text-align:justify;}
+        body{font-family:Georgia; padding: 20mm; text-align:justify;}
     </Style>
     <body> 
         <style>  header{text-align:center;}</style><header><h1>Nasim Ahmed </h1>
         <p> MIS Graduate Student</p>
-        <p> <img src= "D:\Picture4.png" width="13px" height="13px"> <a href="https://github.com/Nasim729" title= "Goes to my github"> Github </a> | <img src= "D:\Picture2.png"> [nasim.ahmed2505@gmail.com] | <img src= "D:\Picture3.png"><a href="https://www.linkedin.com/in/nasim-ahmed7" title="Goes to my Linkedin"> Linkedin</a>
+        <p> <button><img src= "D:\Picture4.png" width="13px" height="13px"> <a href="https://github.com/Nasim729" title= "Goes to my github"> Github </button></a>| <button><img src= "D:\Picture2.png"> nasim.ahmed2505@gmail.com </button>| <button><img src= "D:\Picture3.png"><a href="https://www.linkedin.com/in/nasim-ahmed7" title="Goes to my Linkedin"> Linkedin </button></a>
         </p> </header>
         
         <div>
