--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <body> 
         <style>  header{text-align:center;}</style><header><h1>Nasim Ahmed </h1>
         <p> MIS Graduate Student</p>
-        <p> <img src= "D:\Picture4.png" width="13px" height="13px"> <a href="https://github.com/Nasim729" title= "Goes to my github"> Github</a>| <img src= "D:\Picture2.png"> nasim.ahmed2505@gmail.com </button>| <img src= "D:\Picture3.png"><a href="https://www.linkedin.com/in/nasim-ahmed7" title="Goes to my Linkedin"> Linkedin </a>
+        <p> <img src= "D:\Resume html folder\Picture4.png" width="13px" height="13px"> <a href="https://github.com/Nasim729" title= "Goes to my Github"> Github </a>| <img src= "D:\Resume html folder\Picture2.png"> nasim.ahmed2505@gmail.com | <img src= "D:\Resume html folder\Picture3.png"><a href="https://www.linkedin.com/in/nasim-ahmed7" title="Goes to my Linkedin"> Linkedin </a>
         </p> </header>
         
         <div>
