--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         <div>
              <h2> SKILLS</h2>
              <hr>
-             <p> <dd> • SAP S/4HANA, AWS, Python, SQL, HTML, CSS, Power BI, Tableau and MS Office Applications</dd></p>
+             <p> <dd> • SAP S/4HANA, Python, SQL, HTML, CSS, Power BI, Tableau and MS Office Applications</dd></p>
              <p> <dd>• Banking, Data Analysis and Customer Support </dd></p>
         </div>
         <br>
         <div>
             <h2> WORK EXEPERIENCE</h2>
             <hr>
-            <p> <b> University of Arkansas: </b> <i>Graduate Assistant </i> (05/2024 – Present) </p>
+            <p> <b> University of Arkansas: </b> <i>Graduate Assistant </i> (06/2024 – Present) </p>
                <p><dd>•	Helped more than 2600 students learn MS Excel, MS Access and PowerPoint as a graduate teaching assistant for ISYS 11203-Business Application Knowledge-Computer Competency at Sam M. Walton College of Business </dd> 
                 
                 </p>
